--- a/getchangepassword.html
+++ b/getchangepassword.html
@@ -7,15 +7,7 @@
 		<title></title>
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
-		<script type="text/javascript">
-			function sendMail() {
-				document.form.action = "sendauthcodemail.php";
-			}
-
-			function sendCode() {
-				document.form.action = "checkauthcode.php";
-			}
-		</script>
+		
 		<style>
 			.area {
 				margin: 20px auto 0px auto;
@@ -59,24 +51,22 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="login.html"></a>
-			<h1 class="mui-title">找回密码</h1>
+			<h1 class="mui-title">修改密码</h1>
 		</header>
 		<div class="mui-content">
-			<form class="mui-input-group" name="form" method="post">
+			<form class="mui-input-group" action="changepasswordindb.php" method="post">
 
 				<div class="mui-input-row">
-					<label>邮箱</label>
-					<input id='email' type="email" name="user_email" class="mui-input-clear mui-input" placeholder="请输入注册邮箱">
+					<label>新密码</label>
+					<input id='email' type="password" name="user_email" class="mui-input-clear mui-input" placeholder="请输入新密码">
 				</div>
-				<div class="mui-content-padded">
-					<button id='sendMail' type="submit" formaction="sendauthcodemail.php" class="mui-btn mui-btn-block mui-btn-primary">发送验证码</button>
-				</div>
+				
 				<div class="mui-input-row">
-					<label>验证码</label>
-					<input id='authcode' type="text" name="auth_code" class="mui-input-clear mui-input" placeholder="请输入验证码">
+					<label>确认密码</label>
+					<input id='authcode' type="password" name="auth_code" class="mui-input-clear mui-input" placeholder="请确认新密码">
 				</div>
 				<div class="mui-content-padded">
-					<button id='sendMail' type="submit" onclick="sendCode()" class="mui-btn mui-btn-block mui-btn-primary">提交</button>
+					<button id='sendMail' type="submit"  class="mui-btn mui-btn-block mui-btn-primary">提交</button>
 				</div>
 			</form>
 		</div>
